Agri_Android_APIs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agri-app
  labels:
    app: agri-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: agri-app
  template:
    metadata:
      labels:
        app: agri-app
    spec:
      containers:
      - name: agri-app
        image: 876092575456.dkr.ecr.us-west-2.amazonaws.com/neurosan_cognizant_sso:203c9fbea3c755e2bad1c949b9be6027b19402df
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /api/open/v1.0/greet
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /api/open/v1.0/greet
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
